add localization to cards

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -8,5 +8,12 @@
   "ticketClass": "فئة التذاكر",
   "tripType": "نوع الرحلة",
   "passengers": "المسافرين",
-  "submit": "إرسال"
+  "submit": "إرسال",
+  "titleOne": "البطاقة الأولى",
+  "titleTwo": "البطاقة الثانية",
+  "titleThree": "البطاقة الثالثة",
+  "subtitleOne": "الأولى",
+  "subtitleTwo": "الثانية",
+  "subtitleThree": "الثالثة",
+  "discription": "لوريم إيبسوم دولور سيت أميت، كونسيكتيتور أديبيسينغ إليت. إنفنتور سيد كونسيكونتور أرور ريبوديانداي نومكوام ديسيرونت كويسكوام ريبيلات ليبيرو آسبريوريس إئروم نام نوبيس، كولبا راتيوني كوام برفيرينديس إسسي، كوبيديتات نيكوي كواس!"
 }
