add about bage to test navigation

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -5,6 +5,7 @@
   "arabic": "العربية",
   "from": "من",
   "to": "إلى",
+  "about": "عن",
   "ticketClass": "فئة التذاكر",
   "tripType": "نوع الرحلة",
   "passengers": "المسافرين",
