--- a/locales/en.json
+++ b/locales/en.json
@@ -5,6 +5,7 @@
   "arabic": "arabic",
   "from": "From",
   "to": "To",
+  "about": "About",
   "ticketClass": "Ticket class",
   "tripType": "Trip type",
   "passengers": "Passengers",
