add footer and update card design

--- a/locales/en.json
+++ b/locales/en.json
@@ -10,12 +10,14 @@
   "tripType": "Trip type",
   "passengers": "Passengers",
   "submit": "Submit",
-  "titleOne": "Card one",
-  "titleTwo": "Card two",
-  "titleThree": "Card three",
-  "subtitleOne": "first",
-  "subtitleTwo": "second",
-  "subtitleThree": "third",
+  "titleOne": "Manggarai Barat",
+  "titleTwo": "Bogor",
+  "titleThree": "Jakarta",
+  "titleFour": "Kota Semarang",
+  "subtitleOne": "Flores Road Trip 3D2N",
+  "subtitleTwo": "Forrester Glamping Co Bogor",
+  "subtitleThree": "Paket Tiket Pesawat Jakarta Bali",
+  "subtitleFour": "Desa Wisata Kandri",
   "discription": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!",
   "travel_anywhere_now": "Travel Anywhere Now!",
   "discover": "Discover ",
